<resources>
    <string name="app_name">BankArgAPP</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- LOGIN -->
    <string name="title_app_login">Login</string>
    <string name="btn_acceder">Acceder</string>
    <string name="form_user">Usuario</string>
    <string name="form_password">Contraseña</string>
    <string name="bankarg_des">© BankArg | Designed by BankArg</string>
    <string name="joaqu_n_bon">Joaquín Bonvechi</string>
    <string name="some_id">$55.425.90</string>
    <string name="tu_cvu_alia">Tu CVU: \n\nAlias: \n\nTeléfono: \n\nDNI: \n\nEmail:\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="transferencias_al_instante">Transferencias al Instante</string>
    <string name="seguridad">Seguridad</string>
    <string name="transferencias">Transferencias</string>
    <string name="tu_plata_en_un_solo_lugar">Tu plata en un solo lugar</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_fusce_ultricies_libero_dui_sit_amet_fringilla_enim_mollis_a_cras_volutpat_pretium_commodo_proin_tempus_malesuada_massa_sit_amet_mattis_magna_accumsan_hendrerit_curabitur_ultrices_elit_mauris_at_laoreet_ante_egestas_id">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ultricies libero dui, sit amet fringilla enim mollis a. Cras volutpat pretium commodo. Proin tempus malesuada massa, sit amet mattis magna accumsan hendrerit. Curabitur ultrices elit mauris, at laoreet ante egestas id.</string>
    <!-- DATOS TARJETA -->

    <string name="num_tarjeta">**** **** **** 9039</string>
    <string name="vencimiento_tarjeta">09/24</string>

</resources>




