<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/col6"
            tools:context=".SobreNosotrosActivity">

            <!--            <androidx.appcompat.widget.Toolbar-->
            <!--                android:id="@+id/toolbar"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="102dp"-->
            <!--                android:layout_alignParentLeft="true"-->
            <!--                android:layout_alignParentTop="true"-->
            <!--                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
            <!--                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
            <!--                android:background="@color/col1"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="1900dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="102dp"
                        android:background="@color/col1"
                        android:elevation="4dp"
                        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

                    <!--                                <FrameLayout-->
                    <!--                                    android:id="@+id/fragment_container"-->
                    <!--                                    android:layout_width="match_parent"-->
                    <!--                                    android:layout_height="match_parent" />-->

                </LinearLayout>

                <View
                    android:id="@+id/account_cir"
                    android:layout_width="60dp"
                    android:layout_height="60.96dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/baseline_person_pin_24"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="411dp"
                    android:layout_height="940dp"
                    android:background="#2C3333"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="366dp"
                        android:layout_height="492dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo_no_background_1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="304dp"
                        android:layout_height="96dp"
                        android:layout_marginTop="32dp"
                        app:cardBackgroundColor="#E7F6F2"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="195dp"
                                android:layout_height="71dp"
                                android:layout_marginEnd="25dp"
                                android:fontFamily="@font/poppins"
                                android:gravity="center"
                                android:text="@string/transferencias_al_instante"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/textView"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/baseline_account_balance_wallet_24" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView4"
                        android:layout_width="304dp"
                        android:layout_height="92dp"
                        android:layout_marginTop="32dp"
                        app:cardBackgroundColor="#E7F6F2"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="227dp"
                                android:layout_height="70dp"
                                android:fontFamily="@font/poppins"
                                android:text="@string/tu_plata_en_un_solo_lugar"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView9"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="30dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/baseline_monetization_on_24" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView3"
                        android:layout_width="304dp"
                        android:layout_height="96dp"
                        android:layout_marginTop="32dp"
                        app:cardBackgroundColor="#E7F6F2"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView4">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/seguridad"
                                android:textColor="#000000"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageView8"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="30dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/baseline_account_balance_24_black" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="57dp"
                    android:background="#E7F6F2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bankarg_des"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/view" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                    app:srcCompat="@mipmap/ondita_about" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="288dp"
                    android:layout_height="302dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_fusce_ultricies_libero_dui_sit_amet_fringilla_enim_mollis_a_cras_volutpat_pretium_commodo_proin_tempus_malesuada_massa_sit_amet_mattis_magna_accumsan_hendrerit_curabitur_ultrices_elit_mauris_at_laoreet_ante_egestas_id"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/sobre_nosotros"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000"
                    android:textSize="34sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:backgroundTint="@color/col1"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/col6"
        app:itemTextColor="@color/col6"
        app:menu="@menu/main_menu"
        app:subheaderColor="@color/col2" />

</androidx.drawerlayout.widget.DrawerLayout>