<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PerfilActivity"
    tools:openDrawer="">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/col6"
            tools:context=".MainActivity">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:background="@color/col1"
                    android:elevation="4dp"
                    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

<!--                                <FrameLayout-->
<!--                                    android:id="@+id/fragment_container"-->
<!--                                    android:layout_width="match_parent"-->
<!--                                    android:layout_height="match_parent" />-->

            </LinearLayout>

            <!--            <androidx.appcompat.widget.Toolbar-->
            <!--                android:id="@+id/toolbar"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="102dp"-->
            <!--                android:layout_alignParentLeft="true"-->
            <!--                android:layout_alignParentTop="true"-->
            <!--                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
            <!--                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
            <!--                android:background="@color/col1"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <View
                android:id="@+id/account_cir"
                android:layout_width="60dp"
                android:layout_height="60.96dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/baseline_person_pin_24"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />

            <!--            <ImageButton-->
            <!--                android:id="@+id/menu"-->
            <!--                android:layout_width="60dp"-->
            <!--                android:layout_height="60dp"-->
            <!--                android:layout_alignParentLeft="true"-->
            <!--                android:layout_alignParentTop="true"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:layout_marginBottom="16dp"-->
            <!--                android:background="@drawable/baseline_menu_24"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/toolbar"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <!--            <FrameLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:id="@+id/fragment_container"/>-->

            <!-- Header Ends -->
            <View
                android:id="@+id/rectangle_3"
                android:layout_width="fill_parent"
                android:layout_height="83dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:background="@color/col2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icono_usuar" />

            <View
                android:id="@+id/local_atm"
                android:layout_width="48dp"
                android:layout_height="49dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/baseline_monetization_on_24"
                app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
                app:layout_constraintStart_toStartOf="@+id/rectangle_3"
                app:layout_constraintTop_toTopOf="@+id/rectangle_3"
                app:layout_constraintVertical_bias="0.47" />

            <View
                android:id="@+id/rectangle_2"
                android:layout_width="fill_parent"
                android:layout_height="57dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#E7F6F2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/bankarg_des"
                android:layout_width="433dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/bankarg_des"
                android:textAppearance="@style/bankarg_des"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:id="@+id/icono_usuar"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:background="@drawable/baseline_person_4_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/joaqu_n_bon"
                android:layout_width="269dp"
                android:layout_height="110dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/joaqu_n_bon"
                android:textAppearance="@style/joaqu_n_bon"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.472"
                app:layout_constraintStart_toEndOf="@+id/icono_usuar"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="122dp"
                android:layout_height="39dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Balance:"
                android:textSize="28dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
                app:layout_constraintStart_toEndOf="@+id/local_atm"
                app:layout_constraintTop_toTopOf="@+id/rectangle_3"
                app:layout_constraintVertical_bias="0.392" />

            <TextView
                android:id="@+id/some_id"
                android:layout_width="167dp"
                android:layout_height="46dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
                app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
                app:layout_constraintHorizontal_bias="0.262"
                app:layout_constraintStart_toEndOf="@+id/balance"
                app:layout_constraintTop_toTopOf="@+id/rectangle_3"
                app:layout_constraintVertical_bias="0.432" />

            <TextView
                android:id="@+id/CVU"
                android:layout_width="192dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="8dp"
                android:text="4562238744196"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toEndOf="@+id/tu_cvu_alia"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="nicoquinonero@gmail.com"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toEndOf="@+id/tu_cvu_alia"
                app:layout_constraintTop_toBottomOf="@+id/DNI" />

            <TextView
                android:id="@+id/Telefono"
                android:layout_width="192dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="351223547"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toEndOf="@+id/tu_cvu_alia"
                app:layout_constraintTop_toBottomOf="@+id/Alias" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_marginTop="96dp"
                android:background="@color/col6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Alias"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_3"
                app:srcCompat="@drawable/baseline_content_copy_24" />

            <TextView
                android:id="@+id/DNI"
                android:layout_width="192dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="31524679"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toEndOf="@+id/tu_cvu_alia"
                app:layout_constraintTop_toBottomOf="@+id/Telefono" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_marginTop="44dp"
                android:background="@color/col6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/CVU"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_3"
                app:srcCompat="@drawable/baseline_content_copy_24" />

            <TextView
                android:id="@+id/tu_cvu_alia"
                android:layout_width="118dp"
                android:layout_height="283dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:gravity="top"
                android:text="@string/tu_cvu_alia"
                android:textAppearance="@style/tu_cvu_alia"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

            <TextView
                android:id="@+id/Alias"
                android:layout_width="192dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="Elmago"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toEndOf="@+id/tu_cvu_alia"
                app:layout_constraintTop_toBottomOf="@+id/CVU" />

            <Button
                android:id="@+id/Enviar"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/col1"
                android:text="Editar Datos"
                android:textSize="26dp"
                android:textColor="@color/col6"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Email" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:backgroundTint="@color/col1"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/col6"
        app:itemTextColor="@color/col6"
        app:menu="@menu/main_menu"
        app:subheaderColor="@color/col2" />

</androidx.drawerlayout.widget.DrawerLayout>